fix vertical alignment of sponsor images

--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -165,7 +165,7 @@ article p a {
 			display: inline-block;
 			margin: 0 .5em;
 			img {
-				vertical-align: top;
+				vertical-align: middle;
 			}
 		}
 	}
